First version that can launch Fiji natively on Windows and Mac